--- a/styleFoliage.css
+++ b/styleFoliage.css
@@ -5,3 +5,20 @@
     border: 10px solid #0000;
     font-weight: bold;
 }
+
+#Oblicz{
+		display: block;
+		text-decoration: none;
+		text-align: center;
+		padding: 1em 2em;
+		width: 10em;
+		border-radius: 1.5em;
+		color: #fff;
+		background-color: mediumblue;
+		transition-property: background-color;
+		transition-duration: 0.3s;
+}
+
+#Oblicz:hover, #Oblicz:focus {
+	background-color: red;
+}
