--- a/template/css/menu.css
+++ b/template/css/menu.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(224, 224, 224);
+    color: black;
 }
 
 .content {
@@ -39,3 +40,8 @@ img{
     background-color: #eca8f5;
     color: white;
   }
+
+.dark-mode {
+  background-color: rgb(27, 25, 25);
+  color: white;
+}
