--- a/template/header.html
+++ b/template/header.html
@@ -9,7 +9,8 @@
     <a href="/matma">Matma</a>
     <a href="/about">About</a>
 </div>
-<button onclick="DarkTheme()"></button>
+<!--<img onclick="" > -->
+<button class="dark" onclick="DarkTheme()"></button>
 <script src="template/js/menu.js"></script>
 </body>
 </html>
