--- a/template/css/foliage.css
+++ b/template/css/foliage.css
@@ -1,9 +1,3 @@
-body {
-	background-color: rgb(224, 224, 224);
-	margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 .podzial{
 	Left: 50%;
   	transform: translateX(-50%);
@@ -45,26 +39,7 @@ body {
 	font-size: large;
 }
 
-.menu {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-.menu a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-.menu a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-.menu a.active {
-    background-color: #eca8f5;
-    color: white;
+.dark-mode ~ .podzial {
+	background-color: rgb(27, 25, 25);
+	color: black;
   }
