--- a/template/footer.html
+++ b/template/footer.html
@@ -1,1 +1,11 @@
+<style>
+footer {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 80px;
+}
+</style>
+
 <footer> ©School-Cheat 2022 </footer>
