--- a/template/css/foliage.css
+++ b/template/css/foliage.css
@@ -9,7 +9,8 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 1px solid black;
-	background-color: rgb(133, 123, 134);
+	background-color: rgb(227, 209, 230);
+	color: black;
     font-weight: bold;
 }
 
