--- a/template/foliage.html
+++ b/template/foliage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foliarz Podział Sieci</title>
-    <link rel="stylesheet" href="./template/css/foliage.css">
+    <link rel="stylesheet" href="template/css/foliage.css">
 </head>
 <body>
     <div class="podzial">
