--- a/template/css/main.css
+++ b/template/css/main.css
@@ -1,8 +1,20 @@
-body{
+body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(27, 25, 25);
+    color: white;
+}
+
+@media screen and (prefers-color-scheme: light) {
+  body {
     background-color: rgb(224, 224, 224);
     color: black;
+  }
+}
+
+img {
+  opacity: .75;
+  transition: opacity .5s ease-in-out;
 }
 
 .content {
@@ -29,19 +41,14 @@ img{
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
+}
   
 .menu a:hover {
     background-color: #ddd;
     color: black;
-  }
+}
   
 .menu a.active {
     background-color: #eca8f5;
     color: white;
-  }
-
-.dark-mode {
-  background-color: rgb(27, 25, 25);
-  color: white;
 }
