--- a/template/foliage.html
+++ b/template/foliage.html
@@ -10,7 +10,7 @@
 <body>
     <div class="podzial">
             <h1>Podział sieci</h1>
-            <input type="text" id="adres" placeholder="Adres" onkeydown="kropkowanie()" maxlength="15" size="15"><br>
+            <input type="text" id="adres" placeholder="Adres" onkeypress="kropkowanie()" maxlength="15" size="15"><br>
             <select name="maska" id="maska">
                 <option value=0>/0 aka 0.0.0.0                 </option>
                 <option value=1>/1 aka 128.0.0.0               </option>
