--- a/template/header.html
+++ b/template/header.html
@@ -8,7 +8,7 @@
         $file = $_SERVER['REQUEST_URI'];
     ?>
 <div class="menu">
-    <a href="/">Home</a>
+    <a href="/index">Home</a>
     <a href="/foliage">Foliarz</a>
     <a href="/matma">Matma</a>
     <a href="/about">About</a>
