--- a/template/index.html
+++ b/template/index.html
@@ -1,3 +1,3 @@
 <div class="content">
-    <img src="template/img/placeholder.png">
+    <img id="syndrome" src="template/img/placeholder.png">
 </div>
