--- a/template/css/main.css
+++ b/template/css/main.css
@@ -19,21 +19,17 @@ body {
   filter: invert(0) hue-rotate(0deg);
 }
 
+/*/
 img {
   opacity: .75;
   transition: opacity .5s ease-in-out;
 }
+/*/
 
 .content {
     position: absolute;
     left: 33%;
     top: 20%;
-}
-
-img#syndrome{
-    text-align: center;
-    height: 600px;
-    width: 600px;
 }
 
 .menu {
