--- a/template/index.html
+++ b/template/index.html
@@ -1,3 +1,3 @@
 <div class="content">
-    <img id="syndrome" src="template/img/placeholder.png">
+    <img src="template/img/placeholder.png" width="300px" height="300px" style="text-align: center;">
 </div>
