Dark theme fix (surely working)
Co-Authored-By: DmytroSobol <79514945+DmytroSobol@users.noreply.github.com>

--- a/template/css/main.css
+++ b/template/css/main.css
@@ -12,11 +12,14 @@ body {
   }
 }
 
-[data-theme='light'] {
+[data-theme='dark'] {
   filter: invert(1) hue-rotate(180deg);
 }
-[data-theme='dark'] {
-  filter: invert(0) hue-rotate(0deg);
+html[data-theme="dark"] h1 span:after {
+  content: "DARK MODE"
+}
+html[data-theme="light"] h1 span:after {
+  content: "LIGHT MODE"
 }
 
 /*/
