--- a/template/foliage.html
+++ b/template/foliage.html
@@ -10,7 +10,8 @@
 <body>
     <div class="podzial">
             <h1>Podział sieci</h1>
-            <input type="text" id="adres" placeholder="Adres" onkeypress="kropkowanie()" maxlength="15" size="15"><br>
+            <input type="text" id="adres" placeholder="Adres" onkeypress="kropkowanie()" maxlength="15" size="15" 
+            pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$"><br>
             <select name="maska" id="maska">
                 <option value=0>/0 aka 0.0.0.0                 </option>
                 <option value=1>/1 aka 128.0.0.0               </option>
