--- a/template/foliage.html
+++ b/template/foliage.html
@@ -6,18 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foliarz Podział Sieci</title>
     <link rel="stylesheet" href="template/css/foliage.css">
-    <link rel="stylesheet" href="template/css/ipInput.css">
 </head>
 <body>
     <div class="podzial">
             <h1>Podział sieci</h1>
-            <input type="checkbox" id="kropowac">
-            <input type="text" class="adres" id="adres" size="15" maxlength="15">
-            <!--onkeydown="kropkowanie()"-->
-
-            <script>
-                    $('.adres').mask('0ZZ.0ZZ.0ZZ.0ZZ', { translation: { 'Z': { pattern: /[0-9]/, optional: true } } });
-            </script>
+            <input type="text" name="adres" id="adres" size="15" maxlength="15" onkeydown="kropkowanie()">
 
             <select name="maska" id="maska">
                 <option value=0>/0 aka 0.0.0.0                 </option>
@@ -101,6 +94,8 @@
             </div>
     </div>
     <script src="template/js/Foliage.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
+    <script>
+        $('input[name="adres"]').mask('0ZZ.0ZZ.0ZZ.0ZZ', { translation: { 'Z': { pattern: /[0-9]/, optional: true } } });
+    </script>
 </body>
 </html>
