--- a/template/foliage.html
+++ b/template/foliage.html
@@ -94,8 +94,8 @@
             </div>
     </div>
     <script src="template/js/Foliage.js"></script>
-    <!--<script>
+    <script>
         $('input[name="adres"]').mask('0ZZ.0ZZ.0ZZ.0ZZ', { translation: { 'Z': { pattern: /[0-9]/, optional: true } } });
-    </script>-->
+    </script>
 </body>
 </html>
