--- a/template/foliage.html
+++ b/template/foliage.html
@@ -10,8 +10,7 @@
 <body>
     <div class="podzial">
             <h1>Podział sieci</h1>
-            <input type="text" name="adres" id="adres" size="15" maxlength="15" onkeydown="kropkowanie()">
-
+            <input type="text" name="adres" id="adres" size="15" maxlength="15" onkeydown="kropkowanie()"><br>
             <select name="maska" id="maska">
                 <option value=0>/0 aka 0.0.0.0                 </option>
                 <option value=1>/1 aka 128.0.0.0               </option>
