--- a/template/foliage.html
+++ b/template/foliage.html
@@ -93,8 +93,12 @@
             </div>
     </div>
     <script src="template/js/Foliage.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
     <script>
-        $('input[name="adres"]').mask('0ZZ.0ZZ.0ZZ.0ZZ', { translation: { 'Z': { pattern: /[0-9]/, optional: true } } });
+        $(document).ready(function(){
+            $('input[name="adres"]').mask('0ZZ.0ZZ.0ZZ.0ZZ', { translation: { 'Z': { pattern: /[0-9]/, optional: true } } });
+        });
     </script>
 </body>
 </html>
