--- a/template/css/main.css
+++ b/template/css/main.css
@@ -23,38 +23,9 @@ html[data-theme="light"] h1 span:after {
 }
 
 /*/
+dark mode img
 img {
   opacity: .75;
   transition: opacity .5s ease-in-out;
 }
 /*/
-
-.content {
-    position: absolute;
-    left: 33%;
-    top: 20%;
-}
-
-.menu {
-    overflow: hidden;
-    background-color: #333;
-}
-  
-.menu a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-  
-.menu a:hover {
-    background-color: #ddd;
-    color: black;
-}
-  
-.menu a.active {
-    background-color: #eca8f5;
-    color: white;
-}
