--- a/template/pojecia.html
+++ b/template/pojecia.html
@@ -1,7 +1,13 @@
+<html>
+
+<head>
+    <title>Pojęcia</title>
+</head>
+
 <body>
     <div class="content">
         <div>
-            <h1 style="margin-left: 20%;">
+            <h1 style="text-align: center;">
                 <a name="menu" id="menu"></a>SŁOWNIK POJĘĆ TECHNICZNYCH</h1>
             <br>
             <p align="center">
@@ -35,7 +41,9 @@
                 <strong> [<a href="#Z">Z</a>] </strong>
             </p>
             <br>
-            <input type="text" id="find">
+
+            <input type="text" id="find" style="text-align: center;">
+
             <br>
             <table width="80%" border="0" cellpadding="0" cellspacing="5" align="center">
                 <tbody>
@@ -2081,3 +2089,5 @@
         </div>
     </div>
 </body>
+
+</html>
