Dark theme rework and cleanup
Search - work in progress

--- a/template/login.html
+++ b/template/login.html
@@ -8,7 +8,7 @@
 
 <body>
     <form method="post" action="/cabinet/login.php" style="margin-left: 25%; width: 50%;">
-        Login: <input type="text" id="login"><br> Hasło: <input type="password" id="password"><br>
+        Login: <input type="text" id="login" autocomplete="email"><br> Hasło: <input type="password" id="password"><br>
         <input type="submit" value="Zaloguj się">
     </form>
 </body>
