--- a/template/pojecia.html
+++ b/template/pojecia.html
@@ -42,7 +42,16 @@
             </p>
             <br>
 
-            <input type="text" id="find" style="text-align: center;">
+            <div class="search">
+                <form>
+                    <center>
+                        <input type="search" id="find" placeholder="Search" size="25">
+                        <button type="submit" id="findButton" onclick="finds()">
+                            <img src="template/img/search.svg" width="25px" height="25px">
+                        </button>
+                    </center>
+                </form>
+            </div>
 
             <br>
             <table width="80%" border="0" cellpadding="0" cellspacing="5" align="center">
@@ -2088,6 +2097,7 @@
 
         </div>
     </div>
+    <script src="template/js/pojecia.js"></script>
 </body>
 
 </html>
