--- a/template/css/main.css
+++ b/template/css/main.css
@@ -1,31 +1,11 @@
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(27, 25, 25);
-    color: white;
-}
-
-@media screen and (prefers-color-scheme: dark) {
-  body {
-    background-color: rgb(224, 224, 224);
+    background-color: #e0e0e0;
     color: black;
-  }
 }
 
-[data-theme='dark'] {
-  filter: invert(1) hue-rotate(180deg);
-}
-html[data-theme="dark"] h1 span:after {
-  content: "DARK MODE"
-}
-html[data-theme="light"] h1 span:after {
-  content: "LIGHT MODE"
-}
-
-/*/
-dark mode img
-img {
-  opacity: .75;
-  transition: opacity .5s ease-in-out;
-}
-/*/
+/* dark body {
+    background-color: #1b1919;
+    color: white;
+} */
