Calculator CSS fix

--- a/template/calc.html
+++ b/template/calc.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matematyka</title>
-    <link rel="stylesheet" href="template/css/calc.js">
+    <link rel="stylesheet" href="template/css/calc.css">
 </head>
 <body>
     <div class="content">    
