--- a/template/wzory.html
+++ b/template/wzory.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wzory Matematyczne</title>
 </head>
+
 <body>
     <div class="content">
         <div>
@@ -55,11 +57,19 @@
                                     <option>(P2)Pole dowolnego trójkąta</option>
                                     <option>(P3)Pole dowolnego trójkąta2</option>
                                     <option>(P4)Pole trójkąta równobocznego</option>
+                                    <option>(P5)Pole trójkąta z wycinka</option>
                                     <option>(h)Wysokość trójkąta równobocznego</option>
-                                    <option></option>
-                                    <option></option>
+                                    <option>(Pw)Pole wycinka koła</option>
+                                    <option>((Po(AB))((Pw)-(P5))Pole odcinka</option>
                                 </optgroup>
-                            </select>
+                                <optgroup label="Trygonometria"></optgroup>
+                                <option></option>
+                                <optgroup label="Funkcje"></optgroup>
+                                <option></option>
+                                <optgroup label="Wzory skróconego mnożenia"></optgroup>
+                                <option></option>
+                                <optgroup label="Wzory redukcyjne"></optgroup>
+                                <option></option>
                             <!-- <input type="text" name="searchform" placeholder="Search" size="25"> -->
                             <button type="submit" id="search-button">
                                 <img src="template/img/search.svg" width="25px" height="25px">
