--- a/template/wzory.html
+++ b/template/wzory.html
@@ -6,13 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wzory Matematyczne</title>
+    <style>
+        select{
+            font-size: larger;
+        }
+    </style>
 </head>
 
 <body>
     <div class="content">
         <div>
             <h1 style="text-align: center;">
-                <a name="menu" id="menu"></a>WZORY MATEMATYCZNE</h1>
+                <a name="menu" id="menu"></a>
+                <b>WZORY MATEMATYCZNE</b>
+            </h1>
             <br>
             <!-- <p align="center">
                 <b> [<a href="#A">A</a>] </b>
