--- a/template/about.html
+++ b/template/about.html
@@ -5,10 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <style>
+        #bottom{
+            position: fixed;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        hr{
+            border-style: double;
+            border-width: 4px;
+        }
+    </style>
 </head>
 <body>
     <div class="content">
-        <h1>test</h1>
+        <center>
+            <h1>Site designed and made for solving and helping with IT and Math related problems.</h1>
+            <hr size="4" color="black">
+            <h2>
+                For contact and business inquiries: [email placeholder]<br>
+                Customer Support: [email placeholder]
+            </h2>
+            <div id="bottom">
+                    <hr size="7" color="black">
+                    <h4>
+                        <b>Stay on the grind</b><br>
+                        <i>School Cheat 2022</i>
+                    </h4>
+            </div>
+        </center>
     </div>
 </body>
 </html>
