--- a/template/wykres.html
+++ b/template/wykres.html
@@ -2,4 +2,11 @@
     <div class="content">
         <iframe src="template/func/src/index.html" width="100%" height="100%"></html>
     </div>
+    
+    <!-- Load React API -->
+    <script src= "https://unpkg.com/react@16/umd/react.production.min.js"></script>
+    <!-- Load React DOM-->
+    <script src= "https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <!-- Load Babel Compiler -->
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </body>
