Commented not used imports
Needed later in function plot development

--- a/template/about.html
+++ b/template/about.html
@@ -21,7 +21,7 @@
 <body>
     <div class="content">
         <center>
-            <h1>Site designed and made for solving and helping with IT and Math related problems.</h1>
+            <h1>Site designed and made for helping with IT and Math related problems.</h1>
             <hr size="4" color="black">
             <h2>
                 For contact and business inquiries: [email placeholder]<br>
