--- a/template/index.html
+++ b/template/index.html
@@ -1,3 +1,3 @@
 <div class="content">
-    <img src="template/img/placeholder.png" width="500px" height="500px" style="text-align: center;">
+    <img src="template/img/placeholder.png" style="text-align: center; width:25%; height: 25%;">
 </div>
