--- a/template/css/calc.css
+++ b/template/css/calc.css
@@ -1,9 +1,9 @@
 .content{
-    top: 20%;
+    top: 35%;
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
-    display: block;
+    z-index: 2;
 }
 
 .calculator {
@@ -13,6 +13,8 @@
     box-shadow: 0px 0px 0px 10px #666;
     border: 5px solid black;
     border-radius: 10px;
+    position: absolute;
+    z-index: 2;
 }
 
 #display {
