Home page changes

--- a/template/about.html
+++ b/template/about.html
@@ -31,7 +31,7 @@
                     <hr size="7" color="black">
                     <h4>
                         <b>Stay on the grind</b><br>
-                        <i>School Cheat 2022</i>
+                        <i>Sigma Tools 2022</i>
                     </h4>
             </div>
         </center>
