--- a/template/index.html
+++ b/template/index.html
@@ -1,3 +1,7 @@
 <div class="content">
-    <img src="template/img/placeholder.png" style="text-align: center; width:25%; height: 25%;">
+    <center>
+        <h1>Sigma Tools</h1>
+        <h2>Narzędzia z Matematyki i IT w zasięgu ręki</h2>
+    </center>
+    
 </div>
