--- a/template/about.html
+++ b/template/about.html
@@ -21,11 +21,10 @@
 <body>
     <div class="content">
         <center>
-            <h1>Site designed and made for helping with IT and Math related problems.</h1>
-            <hr size="4" color="black">
+            <h1>Sigma Tools</h1>
+            <hr size="4" color="black">	
             <h2>
-                For contact and business inquiries: [email placeholder]<br>
-                Customer Support: [email placeholder]
+                Kontakt: sigmatools.org@gmail.com
             </h2>
             <div id="bottom">
                     <hr size="7" color="black">
