--- a/template/wykres.html
+++ b/template/wykres.html
@@ -1,5 +1,6 @@
 <body>
     <div class="content">
+	<h1>Work in progress</h1>
         <iframe src="template/func/src/index.html" width="100%" height="100%"></html>
     </div>
         <!-- Load React API -->
